--- a/assets/userform.css
+++ b/assets/userform.css
@@ -1,10 +1,21 @@
 .userform form {
-  margin: 10px auto;
+   max-width: 600px;
+  margin: 40px auto;
   padding: 10px 20px;
   background: #f4f7f8;
   border-radius: 8px;
 }
-
+.form-submit-msg{
+  text-align: center;
+  font-size: 17px;
+  font-weight: 400;
+  margin-bottom: 26px;
+}
+.form-submit-msg span{
+  display: block;
+  font-size: 30px;
+    color: #00a32a;
+}
 .userform h1 {
   margin: 0 0 30px 0;
   text-align: center;
@@ -34,6 +45,11 @@
   color: #8a97a0;
   box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
   margin-bottom: 10px;
+}
+
+.userform textarea{
+  height: 150px;
+  resize: none;
 }
 
 .userform input[type="radio"],
